Big push for initial supported URL pool.